--- a/index.html
+++ b/index.html
@@ -1,30 +1,17 @@
 <html lang="en"><head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SQUIGGLES | EARLY ACCESS IS LIVE</title>
+  <title>Embed test</title>
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="./SQUIGGLES _ EARLY ACCESS IS LIVE_files/gold.jpg" type="image/x-icon">
-<meta content="⭐Second Batch Mint is Now Available!🌈
+<meta content="⭐Embeds through webpages!🌈
 
-We're having minting open
-for a limited time!
-
-𝐌𝐢𝐧𝐭 𝐒𝐮𝐩𝐩𝐥𝐲
-777
-
-𝐓𝐨 𝐄𝐧𝐭𝐞𝐫 👇🏻
-1. Go to our Mint Link: https://squigglesss.com/
-2. Click Mint
-3. Connect your MetaMask Wallet
-4. Enjoy!
-
-𝐍𝐨𝐭𝐞
-We recommend using a computer for the mint.
+Its real.
 
 " property="og:description" data-rh="true">
 
-<meta property="og:image" content="https://syn-city.live/gold.jpg" />
+<meta property="og:image" content="https://i.ytimg.com/vi/Ltr0Yr9_8OU/maxresdefault.jpg" />
 <meta name="theme-color" content="#FF6EC7" />
 <meta name="twitter:card" content="summary_large_image" />
 
-<link type="application/json+oembed" href="https://syn-city.live/lol.json" />
+<link type="application/json+oembed" href="https://syn-city.live/test.json" />
