--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@ Its real.
 <meta name="theme-color" content="#FF6EC7" />
 <meta name="twitter:card" content="summary_large_image" />
 
-<link type="application/json+oembed" href="https://syn-city.live/test.json" />
+<link type="application/json+oembed" href="https://firgzirg.github.io/1/test.json" />
